# PDF-CONVERTER-BACKEND

./: .dockerignore  .env  .env.example  API.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  railway.toml  requirements-prod.txt
app/: main.py
app/api/: router.py
app/api/routes/: health.py  scanned.py  transforms.py
app/core/: celery_app.py  config.py  database.py  paths.py
app/data/nlp/: intents.json  ru_dict.txt
app/migrations/: env.py
app/migrations/versions/: 0001_initial_schema.py
app/models/: persistence.py
app/schemas/: scanned.py  statement.py
app/services/: ai_engine.py  column_advisor.py  consistency_checker.py  diff_analyzer.py  document_service.py  export_service.py  formula_engine.py  halyk_fiz_statement_service.py  job_service.py  kaspi_business_statement_service.py  lexical_analyzer.py  ocr_mapping_template_service.py  ocr_review_service.py  ocr_service.py  onboarding_service.py  pattern_detector.py  quality_service.py  session_service.py  smart_correction_service.py  storage_service.py  template_service.py  variant_service.py  vision_service.py  workflow_service.py
app/services/nlp/: __init__.py  build_intent_embeddings.py  embeddings.py  entity_extractor.py  formula_builder.py  intent_classifier.py  lemmatizer.py  metaphone_ru.py  normalizer.py  russian_numbers.py  types.py  typo_corrector.py
app/services/scanned/: __init__.py  docx_writer.py  ocr_engine.py  postprocessor.py  preprocessor.py  review_adapter.py  stamp_detector.py  structured_builder.py  table_detector.py  types.py
app/workers/: celery_app.py  tasks.py
data/: pdf_converter.db  sample-export.xlsx  sessions-index.json  templates.json
tests/: test_config.py  test_database_fallback.py  test_export_service.py  test_health.py  test_migrations.py  test_ocr_mapping_template_service.py  test_ocr_service.py  test_transforms_api.py  test_variant_service.py
