[project]
name = "backend"
version = "0.1.0"
description = "Backend for PDF Converter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "azure-ai-documentintelligence>=1.0.2",
    "celery>=5.6.3",
    "docling>=2.84.0",
    "fastapi>=0.135.3",
    "minio>=7.2.20",
    "openpyxl>=3.1.5",
    "orjson>=3.11.8",
    "polars>=1.39.3",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2.2",
    "python-multipart>=0.0.22",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.43.0",
    "xlsxwriter>=3.2.9",
]

[project.optional-dependencies]
vision = [
    "ultralytics>=8.3.230",
]
ocr_local = [
    "rapidocr>=3.7.0",
    "onnxruntime>=1.24.4",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_return_any = true
strict_optional = true
